# fireproxng

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
fireproxng/: __main__.py
fireproxng/lib/: fire.py
fireproxng/utils/: process.py
tests/: conftest.py  test_cli.py
